--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,11 @@
 # --------------------
-#   global configs
+#   global apiRoutesConfig
 # --------------------
         BUILD_MODE=dev
 
 
 # --------------------
-#   docker configs
+#   docker apiRoutesConfig
 # --------------------
         USE_DOCKER=false
         DOCKER_USER=node
@@ -16,7 +16,7 @@
 # --------------------
 #   node mailer
 # --------------------
-        # transporter configs
+        # transporter apiRoutesConfig
         AUTOMATIC_VALIDATE_USERS=false
         NODE_MAILER_TRANSPORTER_IS_SERVICE_GMAIL=false
         NODE_MAILER_TRANSPORTER_NAME=VOID
@@ -25,7 +25,7 @@
 
 
 # --------------------
-#   prisma configs
+#   prisma apiRoutesConfig
 # --------------------
         PRISMA_SERVE_PORT=4466
         PRISMA_ENDPOINT=localhost
@@ -33,7 +33,7 @@
 
 
 # --------------------
-#   servers configs
+#   servers apiRoutesConfig
 # --------------------
     # static-and-api
         PUBLIC_WEB_AND_API_USERS_INVITES_LIMIT=50
