--- a/package.json
+++ b/package.json
@@ -8,16 +8,16 @@
     "games-manager": "node server.js --server-mode-games-manager",
     "lobby-manager": "node server.js --server-mode-lobby-manager",
     "static-and-api": "node server.js --server-mode-static-and-api-serve",
-    "logServer": "node ./src/services/logger/logServer.js",
-    "logs": "node ./src/services/logger/logCli.js all"
+    "loggerServer:start": "pm2 start src/services/logger/loggerServer.js --name logS",
+    "loggerServer:reload": "pm2 reload logS",
+    "loggerServer:delete": "pm2 delete logS",
+    "logs:all": "node src/services/logger/loggerCli.js all"
   },
   "engines": {
     "node": ">=12.x.x"
   },
   "license": "ISC",
   "devDependencies": {
-    "@fimbul/bifrost": "^0.21.0",
-    "@fimbul/ymir": "^0.21.0",
     "@hapi/joi": "^16.1.8",
     "@types/bcrypt": "^3.0.0",
     "@types/chalk": "^2.2.0",
@@ -25,8 +25,7 @@
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.6",
     "@types/express-fileupload": "^1.1.3",
-    "@types/joi": "^14.3.4",
-    "@types/node": "^13.13.9",
+    "@types/node": "^13.13.10",
     "@types/node-fetch": "^2.5.7",
     "@types/nodemailer": "^6.4.0",
     "@types/readline-sync": "^1.4.3",
@@ -39,7 +38,7 @@
     "express": "^4.17.1",
     "express-fileupload": "^1.1.6",
     "graphql": "^14.6.0",
-    "joi": "^14.3.1",
+    "is-reachable": "^4.0.0",
     "node-fetch": "^2.6.0",
     "nodemailer": "^6.4.8",
     "prisma": "^1.34.10",
@@ -47,13 +46,16 @@
     "prompt-sync": "^4.2.0",
     "readline-sync": "^1.4.10",
     "ts-node": "^8.10.2",
-    "tslint-config-airbnb": "^5.11.2",
-    "tslint-consistent-codestyle": "^1.16.0",
-    "tslint-eslint-rules": "^5.4.0",
-    "tslint-microsoft-contrib": "^5.2.1",
     "tsutils": "^3.17.1",
+    "typescript": "^3.9.5",
     "uniqid": "^5.2.0",
     "validate": "^5.1.0",
     "ws": "^7.3.0"
+  },
+  "dependencies": {
+    "@types/helmet": "0.0.47",
+    "@types/joi": "^14.3.4",
+    "helmet": "^3.22.0",
+    "joi": "^14.3.1"
   }
 }
