--- a/prisma.yml
+++ b/prisma.yml
@@ -2,10 +2,10 @@ endpoint: http://localhost:4466
 secret: ${env:PRISMA_SECRET}
 
 datamodel:
-  - /src/servers/models/user/datamodel.user.graphql
-  - /src/servers/models/lobby/datamodel.lobby.graphql
-  - /src/servers/models/table/datamodel.table.graphql
-  - /src/servers/models/room/datamodel.room.graphql
+  - /db/models/datamodel.user.graphql
+  - /db/models/datamodel.lobby.graphql
+  - /db/models/datamodel.table.graphql
+  - /db/models/datamodel.room.graphql
 
 generate:
   - generator: typescript-client
