--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,8 @@
     //    "outDir": "./build",
     /* Redirect output structure to the directory. */
     // "rootDir": "./",                       /* Specify the root directory of input files. Use to control the output directory structure with --outDir. */
-    "composite": true,                     /* Enable project compilation */
+    "composite": true,
+    /* Enable project compilation */
     // "tsBuildInfoFile": "./",               /* Specify file to store incremental compilation information */
     "removeComments": true,
     /* Do not emit comments to output. */
@@ -57,8 +58,10 @@
     // "allowSyntheticDefaultImports": true,  /* Allow default imports from modules with no default export. This does not affect code emit, just typechecking. */
     "esModuleInterop": true,
     /* Enables emit interoperability between CommonJS and ES Modules via creation of namespace objects for all imports. Implies 'allowSyntheticDefaultImports'. */
-    "preserveSymlinks": true,              /* Do not resolve the real path of symlinks. */
-    "allowUmdGlobalAccess": true,          /* Allow accessing UMD globals from modules. */
+    "preserveSymlinks": true,
+    /* Do not resolve the real path of symlinks. */
+    "allowUmdGlobalAccess": true,
+    /* Allow accessing UMD globals from modules. */
 
     /* Source Map Options */
     // "sourceRoot": "",                      /* Specify the location where debugger should locate TypeScript files instead of source locations. */
@@ -67,8 +70,10 @@
     // "inlineSources": true,                 /* Emit the source alongside the sourcemaps within a single file; requires '--inlineSourceMap' or '--sourceMap' to be set. */
 
     /* Experimental Options */
-    // "experimentalDecorators": true,        /* Enables experimental support for ES7 decorators. */
-    // "emitDecoratorMetadata": true,         /* Enables experimental support for emitting type metadata for decorators. */
+    "experimentalDecorators": true,
+    /* Enables experimental support for ES7 decorators. */
+    "emitDecoratorMetadata": true,
+    /* Enables experimental support for emitting type metadata for decorators. */
 
     /* Advanced Options */
     "forceConsistentCasingInFileNames": true
@@ -77,6 +82,8 @@
   "exclude": [
     "./dist",
     "./src/web",
-    "./src/electron"
+    "./src/electron",
+    "./src/servers/",
+    "!./src/servers/apiManager"
   ]
 }
