--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "loggerServer:start": "pm2 start src/services/logger/loggerServer.js --name logS",
     "loggerServer:reload": "pm2 reload logS",
     "loggerServer:delete": "pm2 delete logS",
-    "logs:all": "node src/services/logger/loggerCli.js all",
+    "logs": "node src/services/logger/loggerCli.js",
     "server:api": "node src/servers/apiManager/server.manager.api.js"
   },
   "engines": {
@@ -26,7 +26,7 @@
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.6",
     "@types/express-fileupload": "^1.1.3",
-    "@types/node": "^13.13.10",
+    "@types/node": "^13.13.12",
     "@types/node-fetch": "^2.5.7",
     "@types/nodemailer": "^6.4.0",
     "@types/readline-sync": "^1.4.3",
@@ -41,7 +41,7 @@
     "graphql": "^14.6.0",
     "is-reachable": "^4.0.0",
     "node-fetch": "^2.6.0",
-    "nodemailer": "^6.4.8",
+    "nodemailer": "^6.4.10",
     "prisma": "^1.34.10",
     "prisma-client-lib": "^1.34.10",
     "prompt-sync": "^4.2.0",
@@ -58,7 +58,7 @@
     "@types/helmet": "0.0.47",
     "@types/joi": "^14.3.4",
     "express-validator": "^6.5.0",
-    "helmet": "^3.22.0",
+    "helmet": "^3.23.1",
     "joi": "^14.3.1"
   }
 }
